--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-    "dependencies": {
-        "botbuilder": "^3.13.1",
-        "dotenv": "^4.0.0",
-        "regex": "^0.1.1",
-        "restify": "^6.3.4"
-    },
-    "devDependencies": {
-        "@types/restify": "^5.0.6"
-    }
+  "name": "chat",
+  "version": "0.0.1",
+  "description": "",
+  "dependencies": {
+    "botbuilder": "^3.13.1",
+    "botbuilder-cognitiveservices": "^1.1.0",
+    "dotenv": "^4.0.0",
+    "mongoose": "^5.0.4",
+    "node-schedule": "^1.3.0",
+    "restify": "^6.3.4",
+    "winston": "^2.4.0"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "prd": "nodemon app.js",
+    "debug": "node --inspect-brk app.js"
+  },
+  "devDependencies": {
+    "nodemon": "^1.12.5"
+  }
 }
